--- a/Youtube_challenge/package.json
+++ b/Youtube_challenge/package.json
@@ -2,10 +2,18 @@
   "name": "wetube",
   "version": "1.0.0",
   "description": "Youtube Challenge",
-  "main": "index.js",
   "author": "blackswan1989",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.11.5",
     "express": "^4.17.1"
+  },
+  "scripts": {
+    "start": "nodemon --exec babel-node index.js --delay 2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
