--- a/Youtube_challenge/package.json
+++ b/Youtube_challenge/package.json
@@ -8,7 +8,8 @@
     "@babel/core": "^7.11.6",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pug": "^3.0.0"
   },
   "scripts": {
     "start": "nodemon --exec babel-node init.js --delay 2"
